# codeflix

./: .gitignore  Dockerfile  pyproject.toml
src/domain/category/: entities.py
src/domain/common/: entities.py  exceptions.py  validators.py  value_objects.py
tests/unit/domain/category/: test_unit_entities.py
tests/unit/domain/common/: test_unit_entities.py  test_unit_validators.py  test_unit_value_objects.py
